tests/ui/wf/wf-trait-associated-type-trait.stderr
error[E0277]: the trait bound `<Self as SomeTrait>::Type1: Copy` is not satisfied
  --> $DIR/wf-trait-associated-type-trait.rs:11:19
   |
LL |     type Type2 = (IsCopy<Self::Type1>, bool);
   |                   ^^^^^^^^^^^^^^^^^^^ the trait `Copy` is not implemented for `<Self as SomeTrait>::Type1`
   |
note: required by a bound in `IsCopy`
  --> $DIR/wf-trait-associated-type-trait.rs:7:17
   |
LL | struct IsCopy<T:Copy> { x: T }
   |                 ^^^^ required by this bound in `IsCopy`
help: consider further restricting the associated type
   |
LL | trait SomeTrait where <Self as SomeTrait>::Type1: Copy {
   |                 ++++++++++++++++++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
